[gd_scene load_steps=5 format=2]

[ext_resource path="res://spr_sprites/spr_other/introscreen_telepraesenz.png" type="Texture" id=1]
[ext_resource path="res://levels/0_UIother/scn_efc_WobblyBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/0_UIother/scr_ProjectDescription.gd" type="Script" id=3]
[ext_resource path="res://levels/0_UIother/scn_transitionScreenBlack.tscn" type="PackedScene" id=4]

[node name="ProjectDescription" type="Node2D"]
script = ExtResource( 3 )
scene = "res://levels/scn_BaseScene.tscn"

[node name="introscreen_telepraesenz" type="Sprite" parent="."]
position = Vector2( 811.643, 565.594 )
texture = ExtResource( 1 )

[node name="efc_WobblyBackground" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
margin_left = -107.654
margin_top = -19.2788
margin_right = 1292.35
margin_bottom = 1030.72
rect_scale = Vector2( 1.40246, 1 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TransitionScreenBlack" parent="." instance=ExtResource( 4 )]

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
